--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "cron": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
     "mysql": "^2.18.1",
     "node-cron": "^3.0.2",
     "nodemon": "^3.0.1"
